--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
     - "2.7"
+before_install:
+    - "sudo apt-get install pandoc"
 install:
     - "pip install -r requirements.txt"
 script:
