--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: python
 python:
     - "2.7"
 before_install:
-    - "sudo apt-get install pandoc"
+    - "sudo apt-get update"
+    - "sudo apt-get install haskell-platform"
+    - "cabal update"
+    - "cabal install pandoc"
+    - "export PATH=~/.cabal/bin:$PATH"
 install:
     - "pip install -r requirements.txt"
 script:
